--- a/templates/reset_user_password.html
+++ b/templates/reset_user_password.html
@@ -40,10 +40,10 @@
       <div class="img_container">
         <div class="alert alert-success" role="alert">
           <h6>الارشادات:</h6>
-          <p>1. يجب ان تكون كلمة السر متطابقة</p>
-          <p>2. يجب ان تكون على الاقل ثمانية احرف او رموز او ارقام</p>
-          <p>3. حاول عدم كتابة اسمك ضمن كلمة السر</p>
-          <p>4. حاول عدم كتابة كلمة سر شائعة مثل: 12345678</p>
+          <p>لا يمكن لكلمة المرور أن تكون مشابهة للمعلومات الشخصية الأخرى.</p>
+          <p>كلمة المرور الخاصة بك يجب أن تتضمن 8 حروف على الأقل.</p>
+          <p>لا يمكن أن تكون كلمة المرور شائعة الاستخدام.</p>
+          <p>لا يمكن أن تكون كلمة المرور مكونة من أرقام فقط.</p>
         </div>
       </div>
 
