--- a/templates/change_list_order.html
+++ b/templates/change_list_order.html
@@ -1,12 +1,7 @@
-{% extends "admin/change_list.html" %}
- {% load static %}
-  {% block extrahead%}
-   {%endblock %}
-    {% block content %}
-<h1>Graphs</h1>
-<hr />
-
-{{cl}}
-
-{{ block.super }} 
-{% endblock %}
+{% extends "admin/change_list.html" %} {% load static %} {% block extrahead%}
+{%endblock %}
+<body>
+  {% block content %}
+  <h1>tsteejekesj</h1>
+  {{ block.super }} {% endblock %}
+</body>
