--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -29,6 +29,7 @@
       <div class="img_container">
         <h1>Rido admin area</h1>
         <p>Only admin and shop users can enter this site</p>
+        <p>Admin Dashboard url: <a href="https://ridoapp.onrender.com/admin/">Admin</a></p>
         
       </div>
   </body>
