--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,4 +1,8 @@
-{% extends 'admin/base.html' %} {% load static %}
+{% extends 'admin/base.html' %} {% load static %} {% load pwa %}
+
+<head>
+  {% progressive_web_app_meta %}
+</head>
 <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
 
 {% block branding %}
@@ -16,4 +20,3 @@
 {% endblock %} {% block extrastyle %}
 <link rel="stylesheet" href="{% static 'css/admin.css' %}" />
 {% endblock %}
-<!-- src="https://res.cloudinary.com/abbas-orgs/image/upload/v1665125837/mall/users/2022/10/05/rido_mjudfb.jpg" -->
